# chatbox

./: .aiignore  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  gradio_app.py  installer.py  main.py  pyproject.toml  runtime_hook.py
.github/workflows/: build.yaml  publish.yaml
hooks/: hook-gradio.py
src/: app.py  gradio_app.py
src/hooks/: hook-safehttpx.py
