[project]
name = "local-chatbox"
version = "0.1.0"
description = "Local Chatbox"
requires-python = ">=3.12"
dependencies = [
    "cffi>=1.17.1",
    "environs==14.1.1",
    "gradio>=5.17.1",
    "openai>=1.64.0",
    "pywebview>=5.4",
    "pywin32-ctypes>=0.2.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
    "pywin32-ctypes>=0.2.3",
]

[tool.uv]
dev-dependencies = ["ruff"]
