[project]
name = "local-chatbox"
version = "0.1.1"
description = "Local Chatbox"
requires-python = ">=3.12"
dependencies = [
    "cffi>=1.17.1",
    "environs>=14.1.1",
    "gradio>=5.35.0",
    "openai>=1.93.0",
    "pywebview>=5.4",
    "pywin32-ctypes>=0.2.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]

[tool.uv]
dev-dependencies = ["ruff"]
